@@ -7,6 +7,7 @@ efind (0.4-0) unstable; urgency=low
   * CHANGE: renamed --show-blacklist option to --print-blacklist
   * CHANGE: don't abort import of extensions if a single import fails
   * CHANGE: enable colored log messages by default
+  * CHANGE: the fields %a, %c and %t print the timestamp in seconds
   * FIX: recognize regex and iregex attributes
   * FIX: allow filter functions as first function argument
   * FIX: always return error code if find child process fails
